syntax = "proto3";

option csharp_namespace = "Arbiter.Dispatcher";

service DispatcherRpc {
  rpc Execute (DispatcherRequest) returns (DispatcherResponse);
}

message DispatcherRequest {
  bytes payload = 1;
}

message DispatcherResponse {
  bytes payload = 1;
}
